--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       console.log('loaded...');
-      var socket = io();
+      var socket = io.connect('/client');
       var turn_light = function(onoff) {
         console.log('turn light: ' + onoff);
         socket.emit('write', {pin: 3, on: onoff});
