--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       .layout .gpio.onoff {
         background-color: green;
       }
+      .refresh {
+        margin: 0 auto;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -131,6 +135,7 @@
           <td><div class="right"></div></td>
         </tr>
       </table>
+      <div class="refresh"><a href="javascript:void(0)">refresh all</a></div>
     </div>
       
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
@@ -142,9 +147,28 @@
         $(this).bind('click', function() {
           var pin = parseInt($(this).text(), 10);
           var onoff = !$(this).hasClass('onoff');
-          console.log('write{' + pin + ', ' + onoff + '}');
-          socket.emit('write', {pin: pin, on: onoff});
+          console.log('gpio-write(' + pin + ', ' + onoff + ')');
+          socket.emit('gpio-write', {pin: pin, on: onoff});
           $(this).toggleClass('onoff');
+        });
+      });
+      $('.refresh').bind('click', function() {
+        var pins = [3,5,7,8,10,11,12,13,15,16,18,19,21,22,23,24,26];
+        for (pin in pins) {
+          console.log('gpio-read(' + pin + ')');
+          socket.emit('gpio-read', {pin: pins[pin]});
+        }
+      });
+      socket.on('gpio-value', function(msg) {
+        $('.gpio').each(function() {
+          var pin = parseInt($(this).text(), 10);
+          if (msg.pin == pin) {
+            if (msg.on) {
+              $(this).addClass('onoff');
+            } else {
+              $(this).removeClass('onoff');
+            }
+          }
         });
       });
     </script>
