--- a/pi_b.html
+++ b/pi_b.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Light controller</title>
+    <title>pi remote</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='/static/style.css' rel='stylesheet' type='text/css'>
   </head>
