Change the behavior of actions.

--- a/pi_b.html
+++ b/pi_b.html
@@ -16,79 +16,78 @@
           <td><div class="right">5V</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="3"></div></td>
+          <td><div class="left pindir" value="3">out</div></td>
           <td><div class="pin gpio">3</div></td>
           <td><div class="pin v5">4</div></td>
           <td><div class="right">5V</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="5"></div></td>
+          <td><div class="left pindir" value="5">out</div></td>
           <td><div class="pin gpio">5</div></td>
           <td><div class="pin gnd">6</div></td>
           <td><div class="right">GND</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="7"></div></td>
+          <td><div class="left pindir" value="7">out</div></td>
           <td><div class="pin gpio">7</div></td>
           <td><div class="pin gpio">8</div></td>
-          <td><div class="right pindir" value="8"></div></td>
+          <td><div class="right pindir" value="8">out</div></td>
         </tr>
         <tr>
           <td><div class="left">GND</div></td>
           <td><div class="pin gnd">9</div></td>
           <td><div class="pin gpio">10</div></td>
-          <td><div class="right pindir" value="10"></div></td>
+          <td><div class="right pindir" value="10">out</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="11"></div></td>
+          <td><div class="left pindir" value="11">out</div></td>
           <td><div class="pin gpio">11</div></td>
           <td><div class="pin gpio">12</div></td>
-          <td><div class="right pindir" value="12"></div></td>
+          <td><div class="right pindir" value="12">out</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="13"></div></td>
+          <td><div class="left pindir" value="13">out</div></td>
           <td><div class="pin gpio">13</div></td>
           <td><div class="pin gnd">14</div></td>
           <td><div class="right">GND</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="15"></div></td>
+          <td><div class="left pindir" value="15">out</div></td>
           <td><div class="pin gpio">15</div></td>
           <td><div class="pin gpio">16</div></td>
-          <td><div class="right pindir" value="16"></div></td>
+          <td><div class="right pindir" value="16">out</div></td>
         </tr>
         <tr>
           <td><div class="left">3.3v</div></td>
           <td><div class="pin v3">17</div></td>
           <td><div class="pin gpio">18</div></td>
-          <td><div class="right pindir" value="18"></div></td>
+          <td><div class="right pindir" value="18">out</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="19"></div></td>
+          <td><div class="left pindir" value="19">out</div></td>
           <td><div class="pin gpio">19</div></td>
           <td><div class="pin gnd">20</div></td>
           <td><div class="right">GND</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="21"></div></td>
+          <td><div class="left pindir" value="21">out</div></td>
           <td><div class="pin gpio">21</div></td>
           <td><div class="pin gpio">22</div></td>
-          <td><div class="right pindir" value="22"></div></td>
+          <td><div class="right pindir" value="22">out</div></td>
         </tr>
         <tr>
-          <td><div class="left pindir" value="23"></div></td>
+          <td><div class="left pindir" value="23">out</div></td>
           <td><div class="pin gpio">23</div></td>
           <td><div class="pin gpio">24</div></td>
-          <td><div class="right pindir" value="24"></div></td>
+          <td><div class="right pindir" value="24">out</div></td>
         </tr>
         <tr>
           <td><div class="left">GND</div></td>
           <td><div class="pin gnd">25</div></td>
           <td><div class="pin gpio">26</div></td>
-          <td><div class="right pindir" value="26"></div></td>
+          <td><div class="right pindir" value="26">out</div></td>
         </tr>
       </table>
-      <div class="refresh"><a href="javascript:void(0)">refresh all</a></div>
     </div>
       
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
